--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "fastapi"
+name = "example-fastapi"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi-cli (>=0.0.7,<0.0.8)",
+    "fastapi (>=0.115.14,<0.116.0)"
 ]
 
 
