--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi-cli (>=0.0.7,<0.0.8)",
-    "fastapi (>=0.115.14,<0.116.0)"
+    "fastapi (>=0.115.14,<0.116.0)",
+    "pydantic[email] (>=2.11.7,<3.0.0)"
 ]
 
 
