--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi-cli (>=0.0.7,<0.0.8)",
     "fastapi (>=0.115.14,<0.116.0)",
-    "pydantic[email] (>=2.11.7,<3.0.0)"
+    "pydantic[email] (>=2.11.7,<3.0.0)",
+    "uvicorn[standard] (>=0.35.0,<0.36.0)"
 ]
 
 
