--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "pydantic[email] (>=2.11.7,<3.0.0)",
     "fastapi-cli (>=0.0.7,<0.0.8)",
     "uvicorn[standard] (>=0.35.0,<0.36.0)",
-    "sqlmodel (>=0.0.24,<0.0.25)"
+    "sqlmodel (>=0.0.24,<0.0.25)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 
